--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 
 body {
-    background-color: #ddd6d6; /* Replace with your desired background color */
+    background-color: #000000; /* Replace with your desired background color */
     margin: 0; /* Remove default margin to ensure full coverage */
     padding: 0; /* Remove default padding */
   }
