--- a/src/components/FrontPage.css
+++ b/src/components/FrontPage.css
@@ -1,6 +1,9 @@
 /* FrontPage.css */
+html, body {
+  height: 100%;
+  margin: 0;
+}
 
-/* Style for the main container of the FrontPage component */
 .FrontPage-container {
     /* background-color: #ffffff9c; */
     padding: 20px;
@@ -8,17 +11,21 @@
    
   }
   
-  /* Style for the title */
+  
   .FrontPage-title {
     font-size: 4rem;
-    color: #333;
+    color: #ff0000; /* #bf292b */
     margin-bottom: 20px;
   }
+  .FrontPage-subtitle {
+    font-size: 3rem;
+    color: #ffffff;
+    font-weight: 700;
+  }
   
-  /* Style for the main content */
   .FrontPage-content {
-    font-size: 2rem;
-    color: #f31616;
+    font-size: 1.5rem;
+    color: #ffffff;
     font-weight: 700;
   }
   
@@ -36,4 +43,45 @@
   .FrontPage-button:hover {
     background-color: #0e2756;
   }
-  
+/* FrontPage.css */
+
+.row {
+  display: flex;
+  justify-content: space-between;
+  align-items: stretch;
+}
+
+.ContactInfo-phone,
+.ContactInfo-email,
+.ContactInfo-chatnow {
+  flex: 1;
+  background-color: #020202;
+  /* border: 1px solid #999; */
+  padding: 20px;
+  margin: 20px;
+  text-align: left;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.ContactInfo-phone h2,
+.ContactInfo-email h2,
+.ContactInfo-chatnow h2 {
+  margin-bottom: 10px;
+}
+
+.ContactInfo-phone p,
+.ContactInfo-email p,
+.ContactInfo-chatnow p {
+  margin: 0;
+}
+
+.ContactInfo-phone {
+  text-align: left;
+}
+
+.ContactInfo-chatnow {
+  text-align: left;
+}
