--- a/src/components/FrontPage.css
+++ b/src/components/FrontPage.css
@@ -44,11 +44,14 @@ html, body {
     background-color: #0e2756;
   }
 /* FrontPage.css */
-
-.row {
+.row{
+  display: inline;
+}
+.contactRow {
   display: flex;
   justify-content: space-between;
   align-items: stretch;
+  
 }
 
 .ContactInfo-phone,
@@ -65,6 +68,7 @@ html, body {
   flex-direction: column;
   justify-content: space-between;
 }
+
 
 .ContactInfo-phone h2,
 .ContactInfo-email h2,
@@ -85,3 +89,49 @@ html, body {
 .ContactInfo-chatnow {
   text-align: left;
 }
+
+
+.image-figure {
+  width: 50%; /* Adjust the width as needed */
+  height: 300px; /* Set a fixed height */ 
+  display: inline-block; 
+  text-align: center; /* Center the content */
+  box-sizing: border-box; 
+}
+
+.acimage,
+.frontpageimage {
+  width: 100%; 
+  height: 100%; 
+  object-fit: cover; /* Maintain aspect ratio and cover the entire container */
+  max-height:100%;
+  border-color: #ffffff;
+  border-width: 15px;
+  border-style: solid;
+}
+
+figcaption {
+  font-style: italic;
+  margin-top: 5px;
+  color: #ffffff;
+}
+
+figure {
+  text-align: left;
+}
+/* .image-figure {
+  position: relative;
+} */
+figcaption {
+  font-style: italic;
+  margin-top: 5px;
+  color:#ffffff;
+  position: center;
+  bottom: 0; /* Adjust as needed */
+  width: 100%;
+  background-color: rgba(19, 17, 17, 0.8); /* Add a semi-transparent background */
+  text-align: center;
+  /* margin: 0; */
+}
+
+
