--- a/src/App.css
+++ b/src/App.css
@@ -58,10 +58,10 @@ body {
   }
   
   
-  footer {
-    position: relative;
+  .footer {
+    position: fixed;
     bottom: 0;
-    margin-top: auto;
+    /* margin-top: auto; */
     background-color: #333;
     color: #fff;
     padding: 20px 0;
