--- a/src/components/FrontPage.css
+++ b/src/components/FrontPage.css
@@ -45,7 +45,10 @@ html, body {
   }
 /* FrontPage.css */
 .row{
-  display: inline;
+  display: flex;
+  justify-content: space-between; 
+  align-items: flex-start; 
+
 }
 .contactRow {
   display: flex;
@@ -110,18 +113,18 @@ html, body {
   border-style: solid;
 }
 
-figcaption {
+.figcaption {
   font-style: italic;
   margin-top: 5px;
   color: #ffffff;
 }
 
-figure {
+.figure {
   text-align: left;
 }
-/* .image-figure {
+.image-figure {
   position: relative;
-} */
+}
 figcaption {
   font-style: italic;
   margin-top: 5px;
@@ -135,3 +138,9 @@ figcaption {
 }
 
 
+.ServiceAreaMap{
+  width: 50%;
+  height: 100%;
+  object-fit: none;
+
+}
