--- a/src/components/FrontPage.css
+++ b/src/components/FrontPage.css
@@ -9,7 +9,6 @@ html, body {
     padding: 20px;
     text-align: center;
     /* display: flex; */
-   
   }
   
   
@@ -134,3 +133,7 @@ figcaption {
 }
 
 
+.reviews-container {
+  padding: 2% 6%;
+  text-align: center;
+}
