--- a/src/components/FrontPage.css
+++ b/src/components/FrontPage.css
@@ -5,28 +5,46 @@ html, body {
 }
 
 .FrontPage-container {
-    /* background-color: #ffffff9c; */
-    padding: 20px;
-    text-align: center;
-    /* display: flex; */
+    background: 
+        linear-gradient(to right, transparent, black), /* Gradient effect */
+        url(https://st2.depositphotos.com/1058411/12264/i/450/depositphotos_122640292-stock-photo-closeup-of-male-technician-repairing.jpg) center center / cover no-repeat; /* Background image */
+
+    /* background-image: url(https://st2.depositphotos.com/1058411/12264/i/450/depositphotos_122640292-stock-photo-closeup-of-male-technician-repairing.jpg); */
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;  
+    text-align: right;
+    display:block;
   }
   
-  
+  .intro-block{
+    /* padding: 10px; */
+    /* margin: 10px; */
+    text-align: left;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    max-width: 500px;
+    margin-bottom: 20px;
+    margin-left: auto;
+  }
+
   .FrontPage-title {
-    font-size: 4rem;
+    font-size: auto;
     color: #ff0000; /* #bf292b */
     margin-bottom: 20px;
   }
   .FrontPage-subtitle {
-    font-size: 3rem;
+    font-size: auto;
     color: #ffffff;
     font-weight: 700;
   }
   
   .FrontPage-content {
-    font-size: 1.5rem;
+    font-size: auto;
     color: #ffffff;
-    font-weight: 700;
+    font-weight: 400;
   }
   
   /* Style for buttons or any other elements specific to the FrontPage */
@@ -48,6 +66,7 @@ html, body {
   display: flex;
   justify-content: space-between;
   align-items: stretch;
+  margin: 0;
   
 }
 
@@ -63,49 +82,59 @@ html, body {
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  
 }
 
 
 .ContactInfo-phone h2,
 .ContactInfo-email h2,
 .ContactInfo-chatnow h2 {
-  margin-bottom: 10px;
+  /* margin-bottom: 1px; */
+  margin: 0;
+  font-weight:100;
+  font-size: large;
 }
 
 .ContactInfo-phone p,
 .ContactInfo-email p,
 .ContactInfo-chatnow p {
   margin: 0;
+  text-align: left;
+  font-weight:bold;
+  font-size: larger;
 }
 
 .ContactInfo-phone {
-  text-align: left;
+  margin-right: 10px;
 }
 
 .ContactInfo-chatnow {
-  text-align: left;
+  margin-left: 10px;
 }
 
+.contactRow > div {
+  padding: 10px;
+}
 
 .image-figure {
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 80px;
-  height: 300px; /* Set a fixed height */ 
+  height: auto; /* Set a fixed height */ 
   /* display: inline-block;  */
   text-align: center; 
   /* box-sizing: border-box;  */
 }
 
 .acimage, .frontpageimage {
-  object-fit: cover; /* Maintain aspect ratio */
-  width: 300px;
-  height: 300px;
-  border-color: #ffffff;
-  border-width: 15px;
-  border-style: solid;
+  object-fit:cover;
+  display: flex;
+  width: auto;
+  height:300px;
+  /* border-color: #ffffff; */
+  /* border-width: 15px; */
+  /* border-style: solid; */
 
 }
 
